# python-web-api

./: README.md  main.py  pyproject.toml
docs/day1/: 02_html_css_js.md  04_http_server.md  08_wsgi_pt2.md  09_templates.md
docs/day2/: 00_os_frameworks.md  01_flask_intro.md  02_flask_contextos.md  03_flask_extensions_e_nosql.md  04.1_flask_cli.md  04_flask_factories.md
exemplos/day1/: client.py  email.template.txt  http_client.py  httpx_client.py  index.html  pagina.html  render_message.py  requests_client.py  server.py  ssr.py  urllib_client.py  wsgi.py
exemplos/day1/blog/: blog.db  database.py  list.template.html  post.template.html  render.py  wsgi.py
exemplos/day1/blog/site/: como-criar-um-blog-utilizando-python.html  index.html  python-e-django.html  python-é-eleita-a-linguagem-mais-popular.html
exemplos/day1/blog_jinja/: blog.db  chani.py  final_wsgi.py  wsgi.py
exemplos/day1/blog_jinja/templates/: base.template.html  form.template.html  list.template.html  post.template.html
exemplos/day2/: app.py
exemplos/day2/flask/: setup.py
exemplos/day2/flask/blog/: app.py  commands.py  config.py  database.py  posts.py
exemplos/day4/: async.py  process.py  sync.py  threads.py
