[project]
name = "python-web-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "flask>=3.1.3",
    "flask-pymongo>=3.0.1",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "legacy-cgi>=2.6.4",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "flask-shell-ipython>=0.5.3",
]
